// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegisterPage /> Should render and match the researcher 1`] = `
<div
  class="styled__Background-sc-1r4kg53-0 eFWbvX"
>
  <div
    class="styled__TopBackground-sc-1r4kg53-1 dgkNIN"
  />
  <div
    class="styled__Header-sc-1r4kg53-2 jnMzyr"
  >
    <img
      class="styled__Logo-sc-1r4kg53-3 dNCrIv"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="styled__Content-sc-1r4kg53-4 dRtmJU"
  >
    <div
      class="Fill-sc-1f4o7x0-0 boyhLn"
    >
      <div
        class="Column-sc-1n6divy-0 jOCHjp"
      >
        <h1
          class="H1-tncdg6-0 khddLc"
          font-size="23"
        >
          <span>
            Register researcher account
          </span>
        </h1>
        <div
          class="Row-x1o3ru-0 fcuGKr"
          width="100%"
        >
          <div
            class="Column-sc-1n6divy-0 cEBgay"
          >
            <p
              class="Text-sc-2lza2m-0 drfDFr"
              width="fit-content"
            >
              First Name
            </p>
            <input
              class="Input-sc-19txxuq-0 eQikpS"
              height="46"
              name="firstName"
              placeholder="Enter first name"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            class="Column-sc-1n6divy-0 gWZjHC"
          >
            <p
              class="Text-sc-2lza2m-0 drfDFr"
              width="fit-content"
            >
              Last name
            </p>
            <input
              class="Input-sc-19txxuq-0 eQikpS"
              height="46"
              name="lastName"
              placeholder="Enter last name"
              type="text"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            E-mail address
          </p>
          <input
            class="Input-sc-19txxuq-0 ghmQSB"
            disabled=""
            height="46"
            name="email"
            placeholder="Enter e-mail address"
            type="email"
            value="test@gmail.com"
            width="100%"
          />
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            Password
          </p>
          <input
            class="Input-sc-19txxuq-0 eQikpS"
            height="46"
            name="password"
            placeholder="Enter password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            Password confirmation
          </p>
          <input
            class="Input-sc-19txxuq-0 eQikpS"
            height="46"
            name="passwordConfirmation"
            placeholder="Retype your password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <button
          class="StyledButton-t20ntd-0 mCxSH"
          color="primary"
          height="46"
          type="submit"
        >
          Register
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<RegisterPage /> Should render and match the snapshot for participant 1`] = `
<div
  class="styled__Background-sc-1r4kg53-0 eFWbvX"
>
  <div
    class="styled__TopBackground-sc-1r4kg53-1 dgkNIN"
  />
  <div
    class="styled__Header-sc-1r4kg53-2 jnMzyr"
  >
    <img
      class="styled__Logo-sc-1r4kg53-3 dNCrIv"
      src="IMAGE_MOCK"
    />
  </div>
  <div
    class="styled__Content-sc-1r4kg53-4 dRtmJU"
  >
    <div
      class="Fill-sc-1f4o7x0-0 boyhLn"
    >
      <div
        class="Column-sc-1n6divy-0 jOCHjp"
      >
        <h1
          class="H1-tncdg6-0 khddLc"
          font-size="23"
        >
          <span>
            Register participant account
          </span>
        </h1>
        <div
          class="Row-x1o3ru-0 fcuGKr"
          width="100%"
        >
          <div
            class="Column-sc-1n6divy-0 cEBgay"
          >
            <p
              class="Text-sc-2lza2m-0 drfDFr"
              width="fit-content"
            >
              First Name
            </p>
            <input
              class="Input-sc-19txxuq-0 eQikpS"
              height="46"
              name="firstName"
              placeholder="Enter first name"
              type="text"
              value=""
              width="100%"
            />
          </div>
          <div
            class="Column-sc-1n6divy-0 gWZjHC"
          >
            <p
              class="Text-sc-2lza2m-0 drfDFr"
              width="fit-content"
            >
              Last name
            </p>
            <input
              class="Input-sc-19txxuq-0 eQikpS"
              height="46"
              name="lastName"
              placeholder="Enter last name"
              type="text"
              value=""
              width="100%"
            />
          </div>
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            E-mail address
          </p>
          <input
            class="Input-sc-19txxuq-0 eQikpS"
            height="46"
            name="email"
            placeholder="Enter e-mail address"
            type="email"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            Password
          </p>
          <input
            class="Input-sc-19txxuq-0 eQikpS"
            height="46"
            name="password"
            placeholder="Enter password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <div
          class="Column-sc-1n6divy-0 gWZjHC"
        >
          <p
            class="Text-sc-2lza2m-0 drfDFr"
            width="fit-content"
          >
            Password confirmation
          </p>
          <input
            class="Input-sc-19txxuq-0 eQikpS"
            height="46"
            name="passwordConfirmation"
            placeholder="Retype your password"
            type="password"
            value=""
            width="100%"
          />
        </div>
        <button
          class="StyledButton-t20ntd-0 mCxSH"
          color="primary"
          height="46"
          type="submit"
        >
          Register
        </button>
        <div
          class="Row-x1o3ru-0 duXTXk"
          width="100%"
        >
          <a
            href="/login"
          >
            <button
              class="StyledTextButton-sc-17cmh3t-0 cKInGX"
              color="#C866EA"
            >
              <span>
                I already have an account
              </span>
            </button>
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
